Cambio login y cardview
Modificacion de las primeras interfaces y logos

--- a/Android/app/src/main/res/layout/activity_visualizar_clientes.xml
+++ b/Android/app/src/main/res/layout/activity_visualizar_clientes.xml
@@ -24,9 +24,9 @@
         android:layout_below="@+id/toolbar"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp">
+        android:layout_marginEnd="10dp">
 
     </android.support.v7.widget.RecyclerView>
 
@@ -44,12 +44,16 @@
 
     <ProgressBar
         android:id="@+id/progressBar_visualizar_clientes"
-        android:layout_width="383dp"
-        android:layout_height="306dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="217dp"
+        android:layout_height="217dp"
+        android:layout_below="@+id/toolbar"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="74dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="97dp"
+        android:layout_marginBottom="426dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
