--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ff9100</color>
-    <color name="colorPrimaryDark">#E65100</color>
-    <color name="colorPrimaryLight">#FFC246</color>
-    <color name="colorAccent">#9E9E9E</color>
+    <color name="colorPrimary">#4C86CC</color>
+    <color name="colorPrimaryDark">#224C80</color>
+    <color name="colorPrimaryLight">#78B5FF</color>
+    <color name="colorAccent">#4C86CC</color>
     <color name="colorPrimaryText">#000000</color>
 </resources>
