--- a/Android/app/src/main/res/layout/activity_registrar_cliente.xml
+++ b/Android/app/src/main/res/layout/activity_registrar_cliente.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Registrar.RegistrarClienteActivity"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    tools:context=".Registrar.RegistrarClienteActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:background="@drawable/ic_registrar_cliente">
 
         <include
             android:id="@+id/toolbar"
@@ -32,23 +32,22 @@
             android:id="@+id/textInputLayout5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="50dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="32dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="24dp"
             android:gravity="center"
             app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideline4"
-            app:layout_constraintVertical_bias="0.347">
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
             <EditText
                 android:id="@+id/edt_nombre_registrar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_user_color"
+                android:drawableStart="@drawable/ic_correo"
                 android:drawablePadding="5dp"
                 android:hint="Nombre del cliente"
                 android:inputType="text" />
@@ -59,9 +58,9 @@
             android:id="@+id/textInputLayout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="24dp"
             app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -71,7 +70,7 @@
                 android:id="@+id/edt_correo_registrar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_correo"
+                android:drawableStart="@drawable/ic_email"
                 android:drawablePadding="5dp"
                 android:hint="Correo del cliente"
                 android:inputType="text" />
@@ -82,9 +81,9 @@
             android:id="@+id/textInputLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="36dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="24dp"
             app:layout_constraintBottom_toTopOf="@+id/edt_direccion_registrar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -94,7 +93,7 @@
                 android:id="@+id/edt_telefono_registrar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_telefono"
+                android:drawableStart="@drawable/ic_phone"
                 android:drawablePadding="5dp"
                 android:hint="Telefono del cliente"
                 android:inputType="number" />
@@ -106,10 +105,10 @@
             android:id="@+id/edt_direccion_registrar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="20dp"
-            android:drawableStart="@drawable/ic_location"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="40dp"
+            android:drawableStart="@drawable/ic_ubicacion_white"
             android:drawablePadding="5dp"
             android:hint="Dirección del cliente"
             android:inputType="text"
@@ -118,8 +117,8 @@
             android:textColorHighlight="@android:color/white"
             android:textColorHint="@android:color/white"
             android:textColorLink="@android:color/white"
-            android:theme="@style/boton_secundario"
-            app:layout_constraintBottom_toTopOf="@+id/guideline9"
+            android:theme="@style/boton_principal"
+            app:layout_constraintBottom_toTopOf="@+id/btn_registrar_automovil"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent" />
@@ -128,22 +127,20 @@
             android:id="@+id/btn_registrar_automovil"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="28dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="32dp"
             android:onClick="btn_agregar_cliente"
             android:text="Agregar Cliente"
             android:textSize="18sp"
-            android:theme="@style/boton_principal"
+            android:theme="@style/boton_abajo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edt_direccion_registrar"
-            app:layout_constraintVertical_bias="0.35" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <LinearLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
@@ -180,13 +177,5 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
 
-        <android.support.constraint.Guideline
-            android:id="@+id/guideline9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_begin="521dp" />
-
     </android.support.constraint.ConstraintLayout>
-
 </ScrollView>
