--- a/Android/app/src/main/res/layout/content_menu_inventario.xml
+++ b/Android/app/src/main/res/layout/content_menu_inventario.xml
@@ -6,16 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Visualizar.VisualizarClientesActivity">
-
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".MenuInventarioActivity"
+    tools:showIn="@layout/app_bar_menu_principal">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rcv_visualizar_inventario"
@@ -31,19 +24,19 @@
     </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/btn_float_registrar_citas"
+        android:id="@+id/btn_float_registrar_inventario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
-        android:onClick="btn_float_registrar_cliente"
+        android:onClick="btn_float_registrar_inventario"
         android:src="@drawable/ic_agregar"
         app:backgroundTint="@color/colorPrimary" />
 
     <ProgressBar
-        android:id="@+id/progressBar_visualizar_citas"
+        android:id="@+id/progressBar_visualizar_inventario"
         android:layout_width="217dp"
         android:layout_height="217dp"
         android:layout_below="@+id/toolbar"
