--- a/Android/app/src/main/res/layout/activity_consultar_cliente.xml
+++ b/Android/app/src/main/res/layout/activity_consultar_cliente.xml
@@ -60,7 +60,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="32dp"
-        android:drawableStart="@drawable/ic_email_white"
+        android:drawableStart="@drawable/ic_correo"
         android:drawablePadding="15dp"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/edt_telefono_consultar"
@@ -76,7 +76,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="32dp"
-        android:drawableStart="@drawable/ic_phone_white"
+        android:drawableStart="@drawable/ic_telefono"
         android:drawablePadding="15dp"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/btn_direccion_maps"
