--- a/Android/app/src/main/res/layout/cliente.xml
+++ b/Android/app/src/main/res/layout/cliente.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cdv_cliente"
     android:layout_margin="10dp"
+    android:padding="25dp"
     app:cardCornerRadius="20dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -19,7 +20,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:fontFamily="@font/roboto"
             android:gravity="left"
@@ -35,12 +36,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:drawableLeft="@drawable/ic_email"
-            android:drawablePadding="5dp"
+            android:drawableLeft="@drawable/ic_correo"
+            android:drawablePadding="10dp"
+            android:gravity="center_vertical"
             android:text="correo"
-            android:textSize="12sp"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toBottomOf="@+id/txv_cliente_nombre" />
@@ -50,13 +52,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:drawableLeft="@drawable/ic_phone"
-            android:drawablePadding="5dp"
+            android:drawableLeft="@drawable/ic_telefono"
+            android:drawablePadding="10dp"
+            android:gravity="center_vertical"
             android:text="telefono"
-            android:textSize="12sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
