--- a/Android/app/src/main/res/layout/cliente.xml
+++ b/Android/app/src/main/res/layout/cliente.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cdv_cliente"
     android:layout_margin="10dp"
-    android:padding="25dp"
     app:cardCornerRadius="20dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -20,13 +19,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:fontFamily="@font/roboto"
             android:gravity="left"
             android:text="nombre"
             android:textColor="@android:color/black"
-            android:textSize="14sp"
+            android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toTopOf="parent" />
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="8dp"
             android:drawableLeft="@drawable/ic_correo"
             android:drawablePadding="10dp"
             android:gravity="center_vertical"
